    * Bump org.apache:apache from 32 to 33 #157.
    * Add org.apache.juneau.rest.mock.MockServletResponse.sendRedirect(String, int, boolean) for jakarta.servlet:jakarta.servlet-api 6.1.0.
    * Bump org.junit:junit-bom from 5.10.3 to 5.11.4 #161, #168, #171, #173, #185.
    * Flip console output logic on shutdown from a system property called 'SystemUtils.quiet' to 'SystemUtils.verbose'.
    
Release Notes - Juneau - Version 9.0.1

** Improvement

    * [JUNEAU-243] Bump jetty.version from 11.0.13 to 11.0.16.
    * [JUNEAU-244] Bump springboot.version from 3.0.1 to 3.1.3 #97, #102, #104, #106.
    * [JUNEAU-245] Bump hibernate.version from 5.6.14.Final to 5.6.15.Final #95.
    * [JUNEAU-246] Bump org.eclipse.jgit from 6.4.0.202211300538-r to 6.6.1.202309021850-r #101, #105, #110.
    * [JUNEAU-250] Bump org.codehaus.groovy:groovy from 3.0.18 to 3.0.19 #145.

Release Notes - Juneau - Version 9.0.0

** Placeholder

Release Notes - Juneau - Version 8.2.0

** Bug
    * [JUNEAU-168] - Serializer/Parser handling of proxy beans.
    * [JUNEAU-184] - HtmlSerializer doesn't property serialize Collection<A> objects.
    * [JUNEAU-187] - HtmlSerializer does not honor @Bean(bpi) on collections of beans with null values in first row.
    * [JUNEAU-189] - @ReestMethod(debug="true") does not appear to cause HTTP requests to be logged.
    * [JUNEAU-195] - @Beanp("*") not working correctly?
    * [JUNEAU-196] - @Html(noTableHeaders) should work on Collections of beans.
    * [JUNEAU-197] - @BeanConfig(bpi) does not override @Bean(bpi)
    * [JUNEAU-201] - JettyMicroserviceBuilder logConfig method is a NO-OP
    * [JUNEAU-216] - BEANTRAVERSE_initialDepth not setting indentation correctly on first line.
    * [JUNEAU-232] - BEAN_isIgnoreUnknownNullBeanProperties doesn't always work correctly.
    * [JUNEAU-233] - JsonParser is not instantiating interface proxies.
    * [JUNEAU-234] - BEAN_ignoreInvocationExceptionsOnGetters is not working.

** New Feature